Social icons alignment fix

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -138,8 +138,8 @@
 	.c_clearfix;
 	span {
 		line-height: 0;
-		display: block;
-		float: left;
+		display: inline-block;
+		
 		a {
 			width: @socialicons-ico-size;
 			height: @socialicons-ico-size;
@@ -462,7 +462,7 @@
 		
 			&:after {
 				font-size: 16px;
-				color: @font-swatch5;
+				color: @color-swatch5;
 				@media @mobile {
 					line-height: 38px;
 				}
